# Program-Sederhana-Sewa-Pertambangan-V2

./: README.md  alat_berat.ui  buat_ui.py  cetak_laporan.ui  database.py  form.ui  konsumen.ui  logika_alat_berat.py  logika_cetak_laporan.py  logika_konsumen.py  logika_operator.py  logika_pendataan_pembayaran_sewa.py  logika_pengembalian_peralatan.py  logika_penyewaan_alat_berat.py  main.py  operator.ui  pendataan_pembayaran_sewa.ui  pengembalian_peralatan.ui  penyewaan_alat_berat.ui  pertambangan.sql  pyproject.toml  ui_alat_berat.py  ui_cetak_laporan.py  ui_form.py  ui_konsumen.py  ui_operator.py  ui_pendataan_pembayaran_sewa.py  ui_pengembalian_peralatan.py  ui_penyewaan_alat_berat.py
